--- a/design.css
+++ b/design.css
@@ -8,14 +8,23 @@ html, body {
 
 body {
     background:#212936;
+    overflow: hidden;
 }
 
+
 .container {
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    width:100%;
-    height:100%;
+    width:80%;
+    margin:0 auto;
+    margin-top:50%;
+    overflow:hidden;
+    transform: translateY(-50%);
+}
+
+.logo {
+    width:200px;
+    margin:0 auto;
+    display:block;
+    text-align:center;
 }
 
 .title {
@@ -23,6 +32,7 @@ body {
     text-transform: uppercase;
     font-weight:300;
     font-size:1em;
+    text-align:center;
 }
 
 .title strong {
